--- a/app/src/main/res/layout/usuario_config.xml
+++ b/app/src/main/res/layout/usuario_config.xml
@@ -28,7 +28,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2">
+        app:layout_constraintVertical_bias="0.3">
 
         <TextView
             android:id="@+id/textView10"
@@ -100,25 +100,14 @@
                 style="@style/ParalelButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Testar conexão com a API" />
+                android:text="Acordar Back-end" />
 
-                <Button
-                    android:id="@+id/button5"
-                    style="@style/ParalelButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Testar GET" />
-
-                <Button
-                    android:id="@+id/button6"
-                    style="@style/ParalelButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Testar POST" />
 
                 <TextView
                     android:id="@+id/textDevStatus"
                     style="@style/text_title"
+                    android:textSize="15dp"
+                    android:layout_marginHorizontal="40dp"
                     android:textAlignment="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
