--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="tint">#e60000</color>
     <color name="icon">#687076</color>
 
+    <color name="transparent">#00FFFFFF</color>
+
     <color name="red">#F44336</color>
     <color name="blue">#03A9F4</color>
     <color name="yellow">#FFEB3B</color>
