--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <style name="text_title">
-        <item name="android:textSize">30dp</item>
+        <item name="android:textSize">25dp</item>
         <item name="android:textColor">@color/text</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAlignment">center</item>
@@ -20,7 +20,7 @@
     </style>
 
     <style name="ParalelButton">
-        <item name="android:backgroundTint">@color/background</item>
+        <item name="android:backgroundTint">@color/transparent</item>
         <item name="android:textColor">#2196F3</item>
         <item name="android:textStyle">bold</item>
         <item name="android:padding">0dp</item>
