--- a/app/src/main/res/layout/item_historico_partida.xml
+++ b/app/src/main/res/layout/item_historico_partida.xml
@@ -3,9 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="6dp"
-    android:layout_marginHorizontal="4dp"
-    app:cardElevation="3dp"
     app:cardCornerRadius="12dp"
     app:cardUseCompatPadding="true">
 
@@ -25,7 +22,7 @@
             android:layout_height="wrap_content"
             android:text="Jogo da Memória"
             android:textStyle="bold"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textColor="@color/text" />
 
         <!-- Data -->
@@ -36,7 +33,7 @@
             android:layout_height="wrap_content"
             android:text="10/11/2025"
             android:textAlignment="center"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textColor="@color/text" />
 
         <!-- Botão Deletar -->
@@ -44,10 +41,10 @@
             android:id="@+id/btnDeletar"
             android:layout_width="50dp"
             android:layout_weight="0.5"
-            android:layout_height="40dp"
+            android:layout_height="35dp"
             android:text="Excluir"
-            android:textSize="14sp"
-            android:textColor="@color/background"
+            android:textSize="12sp"
+            android:textColor="#FFFFFF"
             android:backgroundTint="@color/red"
             android:layout_marginStart="8dp" />
     </LinearLayout>
