--- a/app/src/main/res/layout/perfil_resultados.xml
+++ b/app/src/main/res/layout/perfil_resultados.xml
@@ -40,7 +40,7 @@
             style="@style/text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tela de resultados" />
+            android:text="Painel de resultados" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,14 +60,16 @@
             <Button
                 android:id="@+id/btnChooseGraph"
                 style="@style/PrimaryButton"
+                android:backgroundTint="@color/icon"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Escolher Grafico" />
+                android:text="Trocar Grafico" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layoutResult"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="visible"
@@ -75,13 +77,12 @@
 
             <Switch
                 android:id="@+id/switch1"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Mostrar ultimo Resultado de cada jogo" />
 
             <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/textGraph"
                 style="@style/text_enun"
                 android:textAlignment="center"
                 android:layout_marginTop="20dp"
@@ -90,25 +91,25 @@
                 android:text="Grafico [tipo]" />
 
             <com.github.mikephil.charting.charts.BarChart
-                android:id="@+id/chartView"
+                android:id="@+id/barChart"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="300dp"
                 android:visibility="visible"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="6dp"/>
 
             <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/meterChart"
+                android:id="@+id/pieChart"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="300dp"
                 android:visibility="gone"
-                android:layout_marginBottom="16dp" />
+                android:layout_marginBottom="6dp" />
 
             <com.github.mikephil.charting.charts.RadarChart
                 android:id="@+id/radarChart"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="300dp"
                 android:visibility="gone"
-                android:layout_marginBottom="16dp" />
+                android:layout_marginBottom="6dp" />
 
             <TextView
                 android:id="@+id/textView14"
@@ -122,7 +123,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerHistorico"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="200dp"
                 android:layout_marginTop="8dp"
                 android:paddingBottom="16dp"
                 android:overScrollMode="never"
@@ -131,7 +132,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <Button
