SelectPlayer screen update: - create select player layout; - create componente cardPlayer; - create Model Jogador; - create AdapterJogador; - add rainbow color to stylize cards; - add fictional players [temporary];
Observations:
- need add route to createPlayer button yet;
- need complete API methods;
- need links buttons with API methods;
- need add Game Screens and your logic;
- if games screen don´t created, add WebView and uses a Navigator version;

--- a/app/src/main/res/layout/perfil_trocar_player.xml
+++ b/app/src/main/res/layout/perfil_trocar_player.xml
@@ -9,16 +9,16 @@
 
     <TextView
         android:id="@+id/textView"
+        style="@style/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tela de troca de jogador"
-        style="@style/text_title"
+        android:text="Trocar de jogador"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.1" />
 
     <Button
         android:id="@+id/btnReturn"
@@ -35,5 +35,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.03" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerJogadores"
+        android:layout_width="match_parent"
+        android:layout_height="700dp"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        tools:listitem="@layout/item_jogador" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:text="Criar novo jogador"
+        style="@style/PrimaryButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.95" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
