--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,9 @@
     <color name="green">#4CAF50</color>
     <color name="orange">#FF9800</color>
     <color name="purple">#9C27B0</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
+
 </resources>
